@@ -75,6 +75,8 @@ t/test14.x
 t/test16.p
 t/test16.rdt
 t/test16.x
+t/test20-streval.p
+t/test20-streval.rdt
 t/test30-fork.0.p
 t/test30-fork.0.rdt
 t/test30-fork.0.x
