@@ -49,7 +49,7 @@ sub_caller	main::bar	1	20	[ 1 0 0 0 0 0 0 ]
 sub_caller	main::baz	1	21	[ 1 0 0 0 0 0 0 ]
 sub_caller	main::foo	1	13	[ 1 0 0 0 0 0 0 ]
 sub_caller	main::foo	1	14	[ 1 0 0 0 0 0 0 ]
-sub_caller	main::foo	2	1	[ 1 0 0 0 0 0 0 ]
+sub_caller	main::foo	1	19	[ 1 0 0 0 0 0 0 ]
 sub_subinfo	main::bar	[ 1 7 9 1 0 0 0 0 ]
 sub_subinfo	main::baz	[ 1 11 17 1 0 0 0 0 ]
 sub_subinfo	main::foo	[ 1 3 5 3 0 0 0 0 ]
